atualizaçao de css e html

--- a/cordelmoderno.html
+++ b/cordelmoderno.html
@@ -99,7 +99,7 @@
     
     <footer>
         <p>
-            saite criado por<a href="https://github.com/Rafaellmiranda"target="-black"> rafael miranda</a> 
+            <a href="https://github.com/Rafaellmiranda"target="-black">site criado por  Rafael Miranda</a> 
         </p>
 
     </footer>
